--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@ background: "/img/bg-about.jpg"
 ---
 
 <div style="margin-bottom: 100px;">
-  <h1> Who Am I? </h1>
-  <br/>If you've made it here, you're awesome.
-  <br/>Showering blessings on you.
-  <br/>Don't need to share anything within 5 seconds.
+  <h1> Who Are We? </h1>
+  <br/>We're a dedicated.
+  <br/>group of students from Irvington High School.
+  <br/>who wish to help maintain the history of others.
 </div>
